Wire Supabase CLI migrate/seed scripts.
Adds npm scripts and execSync-based helpers so db:migrate pushes pending migrations and db:seed resets via Supabase CLI, with seed SQL relocated under supabase/ for automatic resets.

--- a/salon6-kiosk/package.json
+++ b/salon6-kiosk/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings=0",
     "typecheck": "tsc --noEmit",
-    "test": "npm run lint && npm run typecheck"
+    "test": "npm run lint && npm run typecheck",
+    "db:migrate": "node scripts/migrate.mjs",
+    "db:seed": "node scripts/seed.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
