--- a/salon6-kiosk/package.json
+++ b/salon6-kiosk/package.json
@@ -13,6 +13,7 @@
     "db:seed": "node scripts/seed.mjs"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.78.0",
     "next": "16.0.8",
     "react": "19.2.1",
