Replace admin dashboard with Ops Home
- Replace placeholder dashboard with Today/Ops Home view
- Add admin navigation (Today, Requests, Settings)
- Create /admin route that renders Today view
- Redirect /admin/dashboard to /admin/today for backward compatibility
- Add three metric tiles: Waiting visits, New requests, Paid today
- Update Today view with truthful copy about Phorest integration
- Remove 'My role' card and booking-related promises
- Add Settings page for kiosk tokens and salon info
- Fix admin authentication (use service role for staff_users lookup)
- Add middleware for Supabase session cookie refresh
- Update browser client to use createBrowserClient from @supabase/ssr
- Enable 'Book a visit' feature on kiosk home page
- Add create-admin script for local development

--- a/salon6-kiosk/package.json
+++ b/salon6-kiosk/package.json
@@ -11,7 +11,8 @@
     "test": "npm run lint && npm run typecheck && npm run test:unit",
     "test:unit": "tsx --test src/lib/validation/__tests__/bookings.test.ts src/app/api/kiosk/check-in/__tests__/helpers.test.ts src/lib/__tests__/visits-uniqueness.test.ts src/app/api/stripe/__tests__/webhook-idempotency.test.ts src/app/api/booking-requests/__tests__/handlers.test.ts",
     "db:migrate": "node scripts/migrate.mjs",
-    "db:seed": "node scripts/seed.mjs"
+    "db:seed": "node scripts/seed.mjs",
+    "db:create-admin": "node scripts/create-admin.mjs"
   },
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
